# Medical-Voice-Assistant

./: .env.example  README.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 1b93add22c8f_create_patients_table.py
app/: __init__.py  main.py
app/api/: __init__.py  patients.py
app/core/: __init__.py  config.py  logging.py
app/db/: __init__.py  client.py  schema.py
app/voice/: __init__.py  assistant.py  prompt.py  tools.py  webhook.py
tests/: test_api.py  test_schema.py
